Added TitleBar/footer to the Page

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,16 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header>
+        <div class="titlebar">
+            <img class="vlc-logo" src="../staticUtils/CodeSpellCasterMediaPlayer.png" alt="">
+            <h1 id="title-txt">media player</h1>
+        </div>
+    </header>
+    <div id="toast"></div>
+    <main id="main-id" class="main">
+    </main>
+    <footer class="footer"></footer>
+    <script src="script.js"></script>
 </body>
 </html>
