Added MenuBar to the Page

--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,32 @@
             <img class="vlc-logo" src="../staticUtils/CodeSpellCasterMediaPlayer.png" alt="">
             <h1 id="title-txt">media player</h1>
         </div>
+        <div class="menu-bar">
+            <div class="menu">
+                <div class="menu-btn" id="open-btn">
+                    Open
+                </div>
+            <input type="file" id="input-file">
+            </div>
+            <div class="menu">
+                <div class="menu-btn">
+                    Playback
+                </div>
+                <ul class="menu-items">
+                    <li id="speed-up">Speed Up</li>
+                    <li id="speed-down">Speed Down</li>
+                </ul>
+            </div>
+            <div class="menu">
+                <div class="menu-btn">
+                    Audio
+                </div>
+                <ul class="menu-items">
+                    <li id="volume-up">Volume Up</li>
+                    <li id="volume-down">Volume Down</li>
+                </ul>
+            </div>
+        </div>
     </header>
     <div id="toast"></div>
     <main id="main-id" class="main">
