--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
     </style>
-    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="/src/reset.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="src/style.css">
 </head>
 <body>
     <header>
@@ -57,6 +57,6 @@
             <i class="fa-solid fa-expand fa-xl" style="padding: 1.2rem 0.5rem; cursor: pointer;" id="full-screen"></i>
         </div>
     </footer>
-    <script src="script.js"></script>
+    <script src="src/script.js"></script>
 </body>
 </html>
