--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <div class="titlebar">
-            <img class="vlc-logo" src="../staticUtils/CodeSpellCasterMediaPlayer.png" alt="">
+            <img class="vlc-logo" src="/staticUtils/CodeSpellCasterMediaPlayer.png" alt="">
             <h1 id="title-txt">media player</h1>
         </div>
         <div class="menu-bar">
