--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
     </style>
-    <link rel="stylesheet" href="/src/reset.css">
+    <link rel="stylesheet" href="src/reset.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
     <link rel="stylesheet" href="src/style.css">
 </head>
 <body>
     <header>
         <div class="titlebar">
-            <img class="vlc-logo" src="/staticUtils/CodeSpellCasterMediaPlayer.png" alt="">
+            <img class="vlc-logo" src="staticUtils/CodeSpellCasterMediaPlayer.png" alt="">
             <h1 id="title-txt">media player</h1>
         </div>
         <div class="menu-bar">
